## Process this file with automake to produce Makefile.in

info_TEXINFOS = plotutils.texi

# Use --no-split to avoid creating filenames > 14 chars.
MAKEINFO = makeinfo --no-split

man_MANS = ode.1 plot.1 spline.1 tek2plot.1 plotfont.1

# why must the man pages be mentioned explicitly?
EXTRA_DIST = ode.1 plot.1 spline.1 tek2plot.1 plotfont.1 gendocs.sh gendocs_template
