odedatadir = $(datadir)/ode
odedata_DATA = README atwoods.ode bead.ode chem.ode coupled.ode ddho.ode \
dynamo.ode henon.ode limitcycle.ode lorenz.ode lunar.sh orbit.ode \
population.ode qcd.ode rumor.ode soliton.ode viscous.ode

EXTRA_DIST = atwoods.ode bead.ode chem.ode coupled.ode ddho.ode \
dynamo.ode henon.ode limitcycle.ode lorenz.ode lunar.sh orbit.ode \
population.ode qcd.ode rumor.ode soliton.ode viscous.ode
