## Makefile.am for plotutils/pic2plot/libgroff.

noinst_LIBRARIES = libgroff.a
INCLUDES = -I$(srcdir)/../../include -I$(srcdir)/../include

libgroff_a_SOURCES = assert.cc change_lf.cc cset.cc errarg.cc error.cc fatal.cc filename.cc illegal.cc itoa.cc lf.cc lineno.cc progname.cc ptable.cc string.cc strsave.cc

