tek2plotdatadir = $(datadir)/tek2plot
tek2plotdata_DATA = README aitest.tek dmerc.tek fotest.tek imtesth.tek karney.tek ocpred.tek scale.tek skymap.tek skymap2.tek usmap.tek

# files with nonstandard names in this directory
EXTRA_DIST = aitest.tek dmerc.tek fotest.tek imtesth.tek karney.tek ocpred.tek scale.tek skymap.tek skymap2.tek usmap.tek
